overflow fix

--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@
     }
 
     body {
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     .nav > .nav-btn {
